Ajustes no HTML
adição de novo artigo, adição de texto no rodapé

--- a/index.html
+++ b/index.html
@@ -22,14 +22,21 @@
             <h2>Titulo A</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, eligendi.</p>
         </article>
+        
         <article>
             <h2>Titulo B</h2>
             <p>Lorem ipsum dolor sit amet.</p>
+        </article>
+
+        <article>
+            <h2>Titulo C</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </article>
     </main>
 
     <footer>
         <p>Site exemplo</p>
+        <p>Exemplos de branch no Git e GitHub</p>
     </footer>
     
 </body>
