--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
         <p>Exemplos de branch no Git e GitHub</p>
     </footer>
     
+    <script src="js/scripts.js"></script>
 </body>
 </html>
